--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -48,4 +48,5 @@
   </div>
 </div>
 {% include script.html script="send-email.js" %}
+{% include script.html script="eye.js" %}
 {% include style.html style="toggle-comments.css" %}
