Include PGP key information

--- a/_includes/comment-form.html
+++ b/_includes/comment-form.html
@@ -28,6 +28,8 @@
       The password is linked to your email address after your first comment.<br>
       After the first comment, you have to keep using the same password.<br>
       The password is sent in plaintext over email.<br>
+      If you want extra security, you can encrypt your messages using this
+      <a href="/pgp-public-key.txt">public key</a>.
     </span>
   </details>
   <input type="password" id="password-{{include.id}}" class="input" required>
