--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -112,6 +112,7 @@ code.highlighter-rouge {
   color: lighten($text-color, 10%);
   padding: 0.1em 0.2em;
   border: 0.1em solid $purple-border;
+  background-color: $lavender;
   border-radius: 0.1em;
 }
 
