--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -47,6 +47,8 @@
     {% endif %}
   </div>
 </div>
-{% include script.html script="send-email.js" %}
+
+{% include script.html script="openpgp.js" %}
+{% include script.html script="send-comment.js" %}
 {% include script.html script="eye.js" %}
 {% include style.html style="toggle-comments.css" %}
