--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -27,11 +27,13 @@ $usable-width: $content-width - 2 * $spacing-unit;
   "colors",
   "base",
   "layout",
-  "syntax-highlighting",
-  "tags",
+
+  "blog",
   "comments",
   "copy",
-  "blog",
+  "input_form",
   "photography",
-  "social"
+  "social",
+  "syntax-highlighting",
+  "tags"
 ;
