--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -52,7 +52,9 @@
   </div>
 </div>
 
+{% include script.html script="load.js" %}
 {% include script.html script="openpgp.js" %}
+{% include script.html script="preview.js" %}
 {% include script.html script="send-comment.js" %}
 {% include script.html script="eye.js" %}
 {% include style.html style="toggle-comments.css" %}
