Change reply highlight color to yellow

--- a/_sass/_comments.scss
+++ b/_sass/_comments.scss
@@ -18,7 +18,7 @@
 
   .reply-input:checked {
     & ~ .markdown {
-      background-color: $lavender;
+      background-color: $light-yellow;
     }
 
     & ~ .reply-label {
