--- a/_sass/_input_form.scss
+++ b/_sass/_input_form.scss
@@ -54,7 +54,7 @@
     margin-top: 0;
     margin-bottom: 0.5em;
     // The following values for the border is copied based on the values of the textarea.
-    border: 2px solid $purple-border;
+    border: 2px solid transparent;
   }
 
   // Submit button.
