--- a/_layouts/tag_page.html
+++ b/_layouts/tag_page.html
@@ -5,7 +5,7 @@ layout: default
 view all <a href=/blog>posts</a> or <a href=/blog/tags>tags</a>
 </div>
 
-<div class="tag-title">{{ page.title }}</div>
+<div class="blog-subpage-title">{{ page.title }}</div>
 <table class="post-table">
   <tbody>
     {%- for post in page.posts -%}
