--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -6,10 +6,14 @@
   margin-bottom: $spacing-unit;
 }
 
-.tag-title {
+.blog-subpage-title {
   @include relative-font-size(1.1);
   font-weight: bold;
   margin-bottom: 0.5em;
+
+  & ~ a:not(last-child) {
+    margin-right: 0.5em;
+  }
 }
 
 .post-table {
