--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -14,6 +14,10 @@ $line: 1px solid $grey-color-light;
   margin: 0.5rem 0;
 }
 
+.nav-selected {
+  font-weight: bold;
+}
+
 .site-nav  {
   margin: 0.5rem 0;
 
@@ -21,10 +25,6 @@ $line: 1px solid $grey-color-light;
     color: $text-color;
     margin-right: 0.5em;
     @include relative-font-size(1.2);
-
-    &.nav-selected {
-      font-weight: bold;
-    }
   }
 }
 
